--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "primeicons": "^4.1.0",
     "primevue": "^2.6.0",
     "register-service-worker": "^1.7.1",
+    "skeleton-loader-vue": "^1.0.10",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-discord-message": "^5.0.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vue-simple-context-menu": "^3.4.2",
+    "vue-slider-component": "^3.2.15",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.4.0"
   },
