--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-shortkey": "^3.1.7",
     "vue-simple-context-menu": "^3.4.2",
     "vue-slider-component": "^3.2.15",
     "vuesax": "^4.0.1-alpha.25",
